# hamanagergemini

./: .env.example  .gitignore  AI_ASSISTANT_IMPLEMENTATION.md  AI_CAPABILITIES_TEST.md  ANALYSIS_GITHUB_REPO.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEEPSEEK_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DISCOVERY_SUMMARY.md  FIXES_SUMMARY.md  FUNCTIONALITATI_PLATFORMA.md  GITHUB_HA_SETUP_GUIDE.md  GITHUB_INTEGRATION_COMPLETE.md  GITHUB_SETUP.md  HA_CREDENTIALS_GUIDE.md  HA_SERVER_SETUP_GUIDE.md  IMPLEMENTATION_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  NiKu.md  PLATFORM_STATUS.md  PLATFORM_STATUS_COMPLETE.md  PROJECT_RULES.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  README_QUICK_START.md  ROADMAP.md  RULES.md  SERVER_DASHBOARD_SUMMARY.md  SETUP_INSTRUCTIONS.md  START_ALL.bat  START_BACKEND.bat  START_FRONTEND.bat  START_HERE.md  TRAE_RULES.md  (+17 more)
orchestrator/: .env.example  Dockerfile  check_model.py  debug_server.py  fix_db_encryption.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_remote_cmd.py  setup_env.py  test_api_integration.py  test_full_flow.py  test_ssh_ppk.py  update_ha_token.py  update_server_creds.py  verify_frontend_integration.py  verify_ssh.py
orchestrator/app/: config.py  dependencies.py  main.py
orchestrator/app/ai_tools/: __init__.py  base.py  registry.py
orchestrator/app/core/: backup.py  deployment.py  github.py  rollback.py  validation.py
orchestrator/app/db/: base.py  session.py
orchestrator/app/integrations/: backup.py  deepseek.py  esphome.py  fpp.py  secrets.py  tailscale.py  wled.py
orchestrator/app/models/: __init__.py  ai_context.py  ai_conversation.py  ai_file_modification.py  audit_log.py  backup.py  deployment.py  esphome_device.py  fpp_device.py  ha_config.py  led_device.py  (+8 more)
orchestrator/keys/: 1_bbb.ppk.openssh  3_bbb.ppk.openssh  4_bbb.ppk.openssh
orchestrator/ssh_keys/: bbb.ppk.openssh
(+110 files in other folders)
